src/scss/components/todos/_item.scss
@use "../../vars/bootstrap" as bs;
@use "../../utils" as *;

.todo-item {
	border: 1px solid bs.$color-background-active;
	padding: 10px 20px;

	.row {
		&:first-child {
			margin-bottom: 10px;
			.__title {
				display: flex;
				align-items: items-center;

				> span {
					width: fit-content;
					padding-bottom: 5px;
					line-height: 150%;
					border-bottom: 2px dashed orange;
					@include clamp-lines(1);
				}

				> button.icon {
					border-radius: 0;
					font-size: bs.$default-font-size;
				}
			}

			.__description {
				margin-top: 20px;
				font-size: bs.$small-font-size;
				line-height: 140%;
				@include clamp-lines(4);
			}
		}

		&:last-child {
			display: flex;
			flex-direction: row;
			justify-content: space-between;
			align-items: center;

			.__timestamp {
				display: flex;
				align-items: center;
				font-size: bs.$ultra-small-font-size;
				height: 30px;
			}

			.__controls {
				height: 30px;
			}
		}
	}
}

